mysql-deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: service1-mysql
  namespace: ns-name
  labels:
    app: service1
spec:
  selector:
    app: service1
    tier: mysql
  ports:
    - port: 3306
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service1-mysql
  namespace: ns-name
  labels:
    app: service1
spec:
  selector:
    matchLabels:
      app: service1
      tier: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: service1
        tier: mysql
    spec:
      containers:
      - image: artifactory.spng.ir/docker/mysql:5.6
        name: mysql
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: service1-mysql-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: service1-mysql-persistent-storage
        persistentVolumeClaim:
          claimName: service1-mysql-pv-claim
