ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/ssl-passthrough: "false"
  name: service-ingress
  namespace: ns-name
spec:
  rules:
    - host: service.example.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: ns-name
                port: 
                  number: 6000
